# musefont

./: .gitignore  Cargo.toml  README.md
docs/: NoteLines.md
musefont/: Cargo.toml
musefont/src/: constants.rs  font.rs  lib.rs  load.rs  types.rs
musefont/src/notaton/: accidental.rs  (+13 more)
musefont_python/: .gitignore  Cargo.toml  build.rs  link.sh
musefont_python/src/: glue.rs.in  glue_enums.rs.in  glue_lib.rs.in  glue_utils.rs.in  lib.rs
musefont_python/tests/: main.py
musefont_render/: Cargo.toml
musefont_render/src/: main.rs
musescore/: Cargo.toml
musescore/src/: constants.rs  lib.rs  testing.rs
musescore/src/drawing/: instruction.rs  mod.rs  painter.rs  path.rs
musescore/src/font/: font.rs  glyph.rs  load.rs  mapping.rs  mod.rs  sym.rs  sym_id.rs  types.rs
musescore/src/score/: mod.rs
musescore/src/score/drawing/: draw_instruction.rs  mod.rs
musescore/src/score/renderer/: base.rs  mod.rs
musescore/src/score/renderer/atoms/: hook.rs  mod.rs  note.rs  stem.rs
musescore/src/score/renderer/composites/: measure.rs  mod.rs  staff.rs
musescore/src/score/renderer/segments/: chord.rs  mod.rs  segment.rs
musescore/src/score/renderer/spanners/: beam.rs  mod.rs
musescore/src/score/structs/: accidental_type.rs  beam_metric.rs  clef_type.rs  duration.rs  fraction.rs  groups.rs  instrument.rs  interval.rs  key.rs  line.rs  measure_list.rs  mod.rs  ordered_collection.rs  pitchspelling.rs  segment_list.rs  segment_map.rs  spatium.rs  staff_type.rs
musescore/src/score/structure/: mod.rs  score.rs
musescore/src/score/structure/atoms/: accidental.rs  articulation.rs  atom.rs  chordline.rs  hook.rs  ledger_line.rs  mod.rs  note.rs  notedot.rs  notehead.rs  spacer.rs  staff_lines.rs  stem.rs  stem_slash.rs  symbol.rs  symbol_group.rs  text.rs
musescore/src/score/structure/base/: element.rs  mod.rs  score_element.rs  typed_ref.rs  untyped_ref.rs
musescore/src/score/structure/composites/: base_measure.rs  duration_element.rs  measure.rs  mod.rs  part.rs  segment_list.rs  staff.rs  system.rs  tbox.rs  tuplet.rs
musescore/src/score/structure/segments/: bar_line.rs  chord.rs  chordrest.rs  clef.rs  key_sig.rs  mod.rs  rest.rs  segment.rs  segments.rs  time_sig.rs
musescore/src/score/structure/spanners/: arpeggio.rs  beam.rs  line.rs  mod.rs  slur.rs  spanner.rs  tie.rs  tremolo.rs
musescore/src/score/styling/: mod.rs
musescore/src/score/styling/structs/: align.rs  mod.rs  property.rs  style.rs  style_id.rs  text_style_id.rs  types.rs  value_variant.rs
musescore/src/structs/: mod.rs  utils.rs
musescore/src/structs/geometry/: line.rs  mod.rs  polygon.rs  polyline.rs  types.rs
musescore_preview/: Cargo.toml
musescore_preview/src/: main.rs  painter.rs  window.rs
(+37 files in other folders)
