[package]
name = "musescore"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
font-kit = "^0.5"
#font-kit = { path = "../libs/font-kit" }
euclid = "0.20.7"
json = "0.12.0"
log = "0.4"
bitflags = "1.2"